fix: projects section overlapping other sections

--- a/PP.css
+++ b/PP.css
@@ -122,7 +122,7 @@ h1 {
 }
 
 #projects-section {
-    height: 950px;
+    /* height: 950px; */
     background-color: var(--white-color2);
     display: flex;
     text-align: center;
